--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-google-charts": "^3.0.15",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.4.3",
     "typescript": "^4.0.2"
