--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "react-com-rotas",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.5.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.4.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-google-charts": "^3.0.15",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.4.3",
-    "typescript": "^4.0.2"
+    "react-native-svg-charts": "^5.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-modal": "^1.5.2",
+    "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
+    "stringquery": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "surge build --domain react-com-rotas.surge.sh"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
